@@ -3,7 +3,6 @@ package com.eseo.mediastock.dao;
 import com.eseo.mediastock.model.Enum.EnumDispo;
 import com.eseo.mediastock.model.Enum.EnumEtat;
 import com.eseo.mediastock.model.Exemplaire;
-import com.eseo.mediastock.model.Produits.Livre;
 import com.eseo.mediastock.model.Produits.Produit;
 
 import java.sql.Connection;
@@ -16,7 +15,8 @@ import java.util.List;
 public class ExemplaireDAO {
 
     public static List<Exemplaire> getExemplairesByProduit(Produit produit) throws SQLException {
-        String sql = "SELECT * FROM EXEMPLAIRE WHERE id_produit = ?";
+        // Pas besoin de jointure ici, on a déjà l'objet Produit !
+        String sql = "SELECT id, code_barre, etat, statut FROM EXEMPLAIRE WHERE id_produit = ?";
         List<Exemplaire> exemplaires = new ArrayList<>();
 
         try (Connection conn = DatabaseConnection.getConnection();
@@ -32,7 +32,6 @@ public class ExemplaireDAO {
                     EnumDispo statusDispo = EnumDispo.valueOf(rs.getString("statut"));
 
                     Exemplaire exemplaire = new Exemplaire(id, produit, codeBarre, etatPhysique, statusDispo);
-
                     exemplaires.add(exemplaire);
                 }
             }
@@ -47,8 +46,8 @@ public class ExemplaireDAO {
              PreparedStatement stmt = conn.prepareStatement(sql)) {
 
             stmt.setString(1, exemplaire.getCodeBarre());
-            stmt.setString(2, exemplaire.getEtatPhysique().toString());
-            stmt.setString(3, exemplaire.getStatusDispo().toString());
+            stmt.setString(2, exemplaire.getEtatPhysique().name()); // Utilisation de name()
+            stmt.setString(3, exemplaire.getStatusDispo().name());  // Utilisation de name()
             stmt.setInt(4, exemplaire.getProduit().getId());
 
             stmt.executeUpdate();
@@ -61,7 +60,6 @@ public class ExemplaireDAO {
         try (Connection conn = DatabaseConnection.getConnection();
              PreparedStatement stmt = conn.prepareStatement(sql)) {
 
-            // L'utilisation de name() est plus sûre que toString() pour enregistrer les Enums en BDD
             stmt.setString(1, exemplaire.getStatusDispo().name());
             stmt.setString(2, exemplaire.getEtatPhysique().name());
             stmt.setInt(3, exemplaire.getId());
@@ -71,23 +69,24 @@ public class ExemplaireDAO {
     }
 
     public List<Exemplaire> getAllExemplaires() throws SQLException {
-        String sql = "SELECT e.*, p.type_produit FROM EXEMPLAIRE e JOIN PRODUIT p ON e.id_produit = p.id";
-        List<Exemplaire> exemplaires = new ArrayList<>();
+        // Fini le SELECT *, on demande spécifiquement les colonnes utiles
+        String sql = "SELECT e.id, e.code_barre, e.etat, e.statut, e.id_produit, p.type_produit " +
+                "FROM EXEMPLAIRE e " +
+                "INNER JOIN PRODUIT p ON e.id_produit = p.id";
 
         try (Connection conn = DatabaseConnection.getConnection();
              PreparedStatement stmt = conn.prepareStatement(sql);
              ResultSet rs = stmt.executeQuery()) {
 
-            exemplaires = createExemplaires(rs);
+            return createExemplaires(rs); // Simplifié pour renvoyer directement le résultat
         }
-
-        return exemplaires;
     }
 
-    public Exemplaire GetByID(int id) throws SQLException {
-        Exemplaire exemplaire = null;
-        // CORRECTION : Ajout de la jointure pour pouvoir récupérer le 'type_produit'
-        String sql = "SELECT e.*, p.type_produit FROM EXEMPLAIRE e JOIN PRODUIT p ON e.id_produit = p.id WHERE e.id = ?";
+    public Exemplaire getById(int id) throws SQLException {
+        String sql = "SELECT e.id, e.code_barre, e.etat, e.statut, e.id_produit, p.type_produit " +
+                "FROM EXEMPLAIRE e " +
+                "INNER JOIN PRODUIT p ON e.id_produit = p.id " +
+                "WHERE e.id = ?";
 
         try (Connection conn = DatabaseConnection.getConnection();
              PreparedStatement stmt = conn.prepareStatement(sql)) {
@@ -96,20 +95,17 @@ public class ExemplaireDAO {
 
             try (ResultSet rs = stmt.executeQuery()) {
                 List<Exemplaire> list = createExemplaires(rs);
-                if (!list.isEmpty()) {
-                    exemplaire = list.getFirst(); // Récupère le premier élément
-                }
+                // Utilisation de isEmpty() et get(0) : compatible avec toutes les versions de Java
+                return list.isEmpty() ? null : list.get(0);
             }
         }
-
-        return exemplaire;
     }
 
-    // --- NOUVELLE MÉTHODE --- (Nécessaire pour le EmpruntService)
     public Exemplaire findByCodeBarre(String codeBarre) throws SQLException {
-        Exemplaire exemplaire = null;
-        // Jointure obligatoire ici aussi
-        String sql = "SELECT e.*, p.type_produit FROM EXEMPLAIRE e JOIN PRODUIT p ON e.id_produit = p.id WHERE e.code_barre = ?";
+        String sql = "SELECT e.id, e.code_barre, e.etat, e.statut, e.id_produit, p.type_produit " +
+                "FROM EXEMPLAIRE e " +
+                "INNER JOIN PRODUIT p ON e.id_produit = p.id " +
+                "WHERE e.code_barre = ?";
 
         try (Connection conn = DatabaseConnection.getConnection();
              PreparedStatement stmt = conn.prepareStatement(sql)) {
@@ -118,35 +114,38 @@ public class ExemplaireDAO {
 
             try (ResultSet rs = stmt.executeQuery()) {
                 List<Exemplaire> list = createExemplaires(rs);
-                if (!list.isEmpty()) {
-                    exemplaire = list.getFirst();
-                }
+                return list.isEmpty() ? null : list.get(0);
             }
         }
-        return exemplaire;
     }
 
-    // --- TA MÉTHODE UTILITAIRE (inchangée) ---
-    public List<Exemplaire> createExemplaires(ResultSet rs) throws SQLException {
+    private List<Exemplaire> createExemplaires(ResultSet rs) throws SQLException {
         List<Exemplaire> exemplaires = new ArrayList<>();
+
+        // On instancie les DAO une seule fois en dehors de la boucle
+        LivreDAO livreDAO = new LivreDAO();
+        DvdDAO dvdDAO = new DvdDAO();
+        JeuSocieteDAO jeuSocieteDAO = new JeuSocieteDAO();
 
         while (rs.next()) {
             int id = rs.getInt("id");
             String codeBarre = rs.getString("code_barre");
             EnumEtat etatPhysique = EnumEtat.valueOf(rs.getString("etat"));
             EnumDispo statusDispo = EnumDispo.valueOf(rs.getString("statut"));
+
             int idProduit = rs.getInt("id_produit");
             String typeProduit = rs.getString("type_produit");
             Produit produit = null;
+
             switch (typeProduit) {
                 case "Livre":
-                    produit = LivreDAO.GetByID(idProduit);
+                    produit = livreDAO.GetByID(idProduit); // Idéalement, renomme aussi ces méthodes en getById() !
                     break;
                 case "DVD":
-                    produit = DvdDAO.GetByID(idProduit);
+                    produit = dvdDAO.GetByID(idProduit);
                     break;
-                case "JeuSociete": // Vérifie bien que c'est l'orthographe exacte dans ta base de données
-                    produit = JeuSocieteDAO.GetByID(idProduit);
+                case "JeuSociete":
+                    produit = jeuSocieteDAO.GetByID(idProduit);
                     break;
                 default:
                     throw new SQLException("Type de produit inconnu en base : " + typeProduit);
@@ -157,5 +156,4 @@ public class ExemplaireDAO {
         }
         return exemplaires;
     }
-
 }
